# pilstack

./: .gitignore  README.md  build.sh  pyproject.toml
pilstack/: __main__.py
